# geometric

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Common/: TransferParams.h
src/GUI/: IWindow.cpp  IWindow.h  MainWindow.cpp  MainWindow.h  ToolsCircle.cpp  ToolsCircle.h  ToolsRectangle.cpp  ToolsRectangle.h  ToolsTriangle.cpp  ToolsTriangle.h  ToolsWindow.cpp  ToolsWindow.h
src/Model/: Circle.cpp  Circle.h  EFigureType.h  FigureFabric.cpp  FigureFabric.h  IFigure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
